training-20200126/ingress/training-ingress-frd-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: training-ingress-frd-deploy
  namespace: training-20200126
  labels:
    name: training-ingress-frd-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: training-ingress-frd
  template:
    metadata:
      labels:
        name: training-ingress-frd
    spec:
      containers:
        - name: training-ingress-frd
          image: registry.k8s.example.com:5000/nginx:1.17.8
          ports:
            - containerPort: 80
          volumeMounts:
            - name: training-ingress-frd-data
              mountPath: /usr/share/nginx/html
      volumes:
        - name: training-ingress-frd-data
          persistentVolumeClaim:
            claimName: nfs-pvc-training-ingress-frd
