training-20200126/ingress/training-ingress-frd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: training-ingress-frd-svc
  namespace: training-20200126
  labels:
    name: training-ingress-frd-svc
spec:
  type: NodePort
  ports:
    - port: 80        # 服务访问端口
      targetPort: 80  # 容器端口
      nodePort: 30002   # NodePort，节点上监听的端口
  selector:
    name: training-ingress-frd
