training-20200126/ingress/training-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: training-ingress
  namespace: training-20200126
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: ingress.k8s.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: training-ingress-frd-svc
          servicePort: 80
      - path: /api
        backend:
          serviceName: training-ingress-api-svc
          servicePort: 80
